--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
         <title>Meu primeiro site publicado</title>
     </head>
     <body>
-        <h1>Meu primeiro site no GitHub-Pages no GitHub</h1>
+        <h1>Meu primeiro site no GitHub-Pages</h1>
     </body>
 </Html>
